swemint-nft/styles/Home.module.css
.container {
  padding: 0 2rem;
  height:100vh;
  position: relative;
  overflow-y: scroll;
  overflow-x: hidden;
  z-index: 0;
}

.containerOverlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: black;
  opacity: 0.5;
  z-index: -1;

}

.layout {
  display: grid;
  grid-template-rows: calc(100vh - 30px) 30px;
  height: 80vh;
  justify-items: space-between;
  place-items: center;
  min-height: 100vh;
  align-items: end;
}

.header {
  width: 100%;
  z-index: 2;
  position: fixed;
  top: 0;
  padding: 0;
}

.main .title {
  color: white;
  font-family: 'iknu';
  font-weight: 500;
  letter-spacing: 2rem;
  padding: 0px 0px 0px 28px;
  font-size: 14rem;
}

.main {
  font-family: 'futura';
  height: 100vh;
  width: 100%;
  text-align: center;
  padding: 0;
  z-index: 2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  text-transform: uppercase;
  gap: 1rem;
}

.main .preamble {
  width: 50vw;
  font-size: 0.9rem;
}

.footer {
  font-family: 'futura';
  width: 100%;
  height: 100%;
  text-align: center;
  z-index: 2;
  letter-spacing: 0.7rem;
  font-size: 0.6rem;
  padding: 0.8rem;
}

